TFP-6308 prematur fratrekk pga av pleiepenger ser på pleiepenger ytelse og ikke bare på innleggelse (#422)